Build basic website skeleton

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RPS</title>
 </head>
 <body>
-    <script src="rockPS.js"></script>
+    <!-- <script src="rockPS.js"></script> -->
+    
+    <h1>lets play some rock paper scissors</h1>
+    <div class="score_container">
+        <div class="you_score"><span>you: </span></div>
+        <div class="cpu_score"><span>cpu: </span></div>
+    </div>
+    <div class="results_container"></div>
+    <div class="button_container">
+        <button></button>
+        <button></button>
+        <button></button>
+    </div>
+    
 </body>
 </html>
