Refractor class naming convention

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     
     <h1>lets play some rock paper scissors</h1>
-    <div class="score_container">
-        <div class="you_score"><span>you: </span></div>
-        <div class="cpu_score"><span>cpu: </span></div>
+    <div class="scoreContainer">
+        <div class="youScore"><span>you: </span></div>
+        <div class="cpuScore"><span>cpu: </span></div>
     </div>
-    <div class="results_container"></div>
-    <div class="button_container">
+    <div class="resultsContainer"></div>
+    <div class="buttonContainer">
         <button class="rock">rock</button>
         <button class="paper">paper</button>
         <button class="scissors">scissors</button>
