Display scores on home page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     <h1>lets play some rock paper scissors</h1>
     <div class="scoreContainer">
-        <div class="youScore"><span>you: </span></div>
-        <div class="cpuScore"><span>cpu: </span></div>
+        you: <span class="youScore"> </span>
+        cpu: <span class="cpuScore"> </span>
     </div>
     <div class="resultsContainer"></div>
     <div class="buttonContainer">
