--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     </div>
     <div class="resultsContainer"></div>
     <div class="buttonContainer">
-        <button class="rock">rock</button>
-        <button class="paper">paper</button>
-        <button class="scissors">scissors</button>
+        <button class="rock" style="display:show">rock</button>
+        <button class="paper" style="display:show">paper</button>
+        <button class="scissors" style="display:show">scissors</button>
+        <button class="playAgain" style="display:none">play again?</button>
     </div>
     
     <script src="rockPS.js"></script>
